fix: increase contrast of "secondary" in dark and light mode

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,8 +17,8 @@ $teal: rgb(64, 200, 224);
 $cyan: rgb(100, 210, 255);
 
 $white: #fff;
-$gray-100: rgb(242, 252, 257);
-$gray-200: rgb(229, 229, 234);
+$gray-100: #f7f7f7;
+$gray-200: #dbdbdb;
 $gray-300: rgb(209, 209, 214);
 $gray-400: rgb(199, 199, 204);
 $gray-500: rgb(174, 174, 178);
@@ -27,9 +27,11 @@ $gray-700: rgb(58, 58, 60);
 $gray-800: rgb(44, 44, 46);
 $gray-900: rgb(28, 28, 30);
 
+$secondary: $gray-200;
+
 $body-color-dark: $gray-500;
-$dark-bg-subtle: #f7f7f7;
-$dark-border-subtle: #f7f7f7;
+$dark-bg-subtle: $gray-100;
+$dark-border-subtle: $gray-100;
 $dark-border-subtle-dark: $gray-900;
 
 //$gray-400: rgb(142, 142, 147);
